...
                VerticalSpacer(8.dp)
                TextInput(
                    value = name,
                    onValueChange = onNameChange,
                    placeholder = stringResource(R.string.subscriptions__name_placeholder),
                    singleLine = true,
                    modifier = Modifier.fillMaxWidth().testTag("SubscriptionName")
                )
                VerticalSpacer(24.dp)
                Caption13Up(text = stringResource(R.string.subscriptions__description), color = Colors.White64)
                VerticalSpacer(8.dp)
                TextInput(
                    value = description,
...
            }
        }
        PrimaryButton(
            text = stringResource(R.string.subscriptions__choose_recipient),
            onClick = onChooseRecipient,
            enabled = amount.atomic > 0uL && name.isNotBlank() && !isLoadingIcon && acceptedMethods.isNotEmpty(),
            modifier = Modifier.testTag("SubscriptionChooseRecipient")
        )
        VerticalSpacer(16.dp)
    }
}

@Composable
...
        footer = {
            PrimaryButton(
                text = stringResource(R.string.subscriptions__propose_subscription),
                onClick = onPropose,
                isLoading = isCreating,
                enabled = selectedTarget != null && !isLoadingIcon,
                modifier = Modifier.testTag("SubscriptionPropose")
            )
            VerticalSpacer(16.dp)
        },
        modifier = Modifier.sheetHeight()
    )
}
...
    expiration: PaymentRequestExpiration,
    onExpirationChange: (PaymentRequestExpiration) -> Unit,
) {
    var expanded by remember { mutableStateOf(false) }
    IconButton(
        onClick = { expanded = true },
        modifier = Modifier.testTag("SubscriptionExpiration")
    ) {
        Icon(
            painter = painterResource(R.drawable.ic_timer_outline),
            contentDescription = stringResource(R.string.wallet__payment_request_expires),
            tint = Colors.White,
        )
...
            ),
        )
        BoxWithConstraints(modifier = Modifier.weight(1f)) {
            Column(
                verticalArrangement = Arrangement.Bottom,
                modifier = Modifier.verticalScroll(rememberScrollState())
                    .heightIn(min = maxHeight).testTag("SubscriptionConfirmationBody")
            ) {
                Image(
                    painter = painterResource(R.drawable.check),
                    contentDescription = null,
                    modifier = Modifier.size(256.dp).align(Alignment.CenterHorizontally)
                )
...
