...
                            tint = accentColor,
                            modifier = Modifier.size(18.dp)
                        )
                    },
                    modifier = Modifier
                        .weight(1f)
                        .testTag("SpecifyInvoiceButton")
                )
            }
            Box(modifier = Modifier.weight(1f)) {
                Tooltip(
                    text = stringResource(R.string.wallet__receive_copied),
                    tooltipState = qrButtonTooltipState,
...
